# marsclaw-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/agent/: context.rs  discovery.rs  mod.rs  orchestrator.rs
src/bots/: mod.rs
src/bots/slack/: mod.rs
src/bots/telegram/: mod.rs
src/bots/whatsapp/: mod.rs
src/channels/: mod.rs
src/config/: mod.rs  setup.rs
src/discord/: mod.rs
src/hooks/: mod.rs
src/llm/: anthropic.rs  cost.rs  mod.rs  openai.rs  retry.rs
src/mcp/: mod.rs
src/orchestration/: mod.rs
src/platform/: mod.rs
src/platform/memory/: mod.rs
src/platform/skills/: mod.rs
src/scheduler/: mod.rs
src/security/: mod.rs
src/server/: mod.rs  terminal.rs  ui.html
src/setup/: mod.rs
src/store/: mod.rs
src/telegram/: mod.rs
src/terminal/: mod.rs
src/tool/: edit.rs  git.rs  list.rs  mod.rs  read.rs  search.rs  shell.rs  write.rs
src/types/: mod.rs
src/whatsapp/: mod.rs
